# PertQuant

./: .gitignore  README.md  equilibrium_v1.py  gen_con.py  gen_con_exp.py  gen_eq.sh  gen_eq_data.py  init_dat.py  ml_nupack.py  multivariate_reg_uM.py  pyproject.toml  setup.cfg
analyzeFASTQ/: NanoPlot_cust.py  NanoPlot_hist.py  NanoPlothist.sh  analyze_Exact_Barcode.sh  analyze_counts.py  analyze_fastq.sh  append_data.py  approx.fastq  barcode_test.fastq  barcode_test_serial.txt  barcodes.txt  batch_stretch_slide.sh  check_sequences.py  config.py  countmatches.py  countreads.py  fastq_files.txt  gen_test_FASTQ.py  prepFASTQ.sh  readFAST5.py  readFASTQ.py  read_count_dat.py  read_summed_counts.py  readme.txt  sum_count_dat.py  sum_count_slide_dat.py  test_barcodes.txt  test_barcodes_empty_line.txt  test_code.py  test_errors.txt  test_perturb.txt  test_readFASTQ.py  test_targets.txt  testcountmatches.fastq  tiny_error.fastq  todo.txt
analyzeFASTQ/archive/: countmatches_v0.py
analyzeFASTQ/read_me_and_example_files/: ex_barcode_file.txt  ex_countmatches_settings.txt  ex_data_analysis.ipynb  ex_fastq.fastq  ex_nonunique_subseq.txt  ex_sum_count_data_settings.txt  readme.txt
analyzeFASTQ/test_count_matches/: test_count_matches_barcode.fastq
analyzeFASTQ/test_count_matches/make_dictionary_tests/: test_barcodes_empty_end.txt  (+4 more)
analyzeFASTQ/test_fastq/: gen_test_FASTQ.py  test2.fastq  tiny.fastq
simCRN/: check_readout_uniqueness.py  equilibrium_v2.py  gen_eq.sh  init_dat.py  multivariate_reg.py  multivariate_reg_uM.py  pick_barcodes.py  readme.py  test.sh  write_dat.py
(+59 files in other folders)
