[metadata]
name = PertQuant
version = 0.0.1
author = Emily Wu
author_email = emwu@mit.edu
description = A toolbox for 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ewuirl/PertQuant.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
    = src
packages = find:

[options.packages.find]
where = src
