[metadata]
name = PertQuant
version = 0.0.1
author = Emily Wu
author_email = emwu@mit.edu
description = A toolbox for quantification with DNA.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ewuirl/PertQuant.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
    = src
packages = find:

[options.entry_points]
console_scripts = 
    gen_eq_data_parallel = PertQuant.simCRN.gen_eq_data_parallel:gen_eq_data_parallel_main
    gen_regularization_plots = PertQuant.simCRN.gen_regularization_plots:gen_regularization_plots_main
    mlp_reg = PertQuant.simCRN.mlp_reg:mlp_reg_main

[options.packages.find]
where = src

